--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/blogusers
-spring.datasource.username=root
-spring.datasource.password=Bronhi951!!
+spring.datasource.username=
+spring.datasource.password=
 
 
 #Hibernate
